Function in separate file for tests

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         <p>The result is <span id="result"></span></p>
     </div>
     <script src="timeConverter.js"></script>
+    <script src="timeConverterfunc.js"></script>
 </body>
 </html>
