--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>
         <p>The result is <span id="result"></span></p>
     </div>
-    <script src="timeConverter.js"></script>
-    <script src="timeConverterfunc.js"></script>
+    <script src="content.js"></script>
+    <script src="timeConverterFunc.js"></script>
 </body>
 </html>
